--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "mongoose": "^7.0.3",
     "mongoose-autopopulate": "^1.0.1",
     "mongoose-paginate-v2": "^1.7.1",
-    "nodemon": "^2.0.22",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.2"
   },
@@ -35,7 +34,9 @@
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.7.0",
     "lint-staged": "^14.0.1",
+    "nodemon": "^3.1.4",
     "prettier": "^3.0.3",
-    "ts-jest": "^29.1.1"
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.2"
   }
 }
