--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
   },
   "license": "mit",
   "dependencies": {
-    "@fastify/cors": "^8.3.0",
+    "@fastify/cors": "^8.5.0",
     "@types/node": "^18.15.3",
     "dotenv": "^16.0.3",
     "fastify": "^4.28.1",
+    "fastify-cors": "^6.1.0",
     "mongoose": "^7.0.3",
     "mongoose-autopopulate": "^1.0.1",
     "mongoose-paginate-v2": "^1.7.1",
@@ -26,6 +27,7 @@
     "typescript": "^5.0.2"
   },
   "devDependencies": {
+    "@types/fastify-cors": "^2.1.0",
     "@types/jest": "^29.5.9",
     "@typescript-eslint/eslint-plugin": "^6.7.3",
     "@typescript-eslint/parser": "^6.7.3",
